
-------------------------------------------------------------------------------

Sun Oct  3 18:28:53 PDT 1999
(Raster)

flippy icon patch :)

-------------------------------------------------------------------------------

Sun Oct  3 21:28:31 PDT 1999
(Raster)

grouped window patch for pager if moving form desktop -> desk

-------------------------------------------------------------------------------

Mon Oct  4 12:25:23 PDT 1999
(Mandrake)

removed apply button from groups break dialog since it was breaking all sorts
of stuff.

-------------------------------------------------------------------------------

Mon Oct  4 12:56:07 PDT 1999
(Raster)

patch to stop possible endless loops in ipc for menu reloading

-------------------------------------------------------------------------------

Mon Oct  4 13:16:37 PDT 1999
(KainX)

Removed extraneous files from ShinyMetal per ljlane's request.

-------------------------------------------------------------------------------

Mon Oct  4 13:31:29 PDT 1999
(Mandrake)

Fixed bugs in snapshotting windows.
order could have potentially been invalid.

-------------------------------------------------------------------------------

Mon Oct  4 16:47:48 PDT 1999
(Mandrake)

some work on the KDE window region code -- so that windows and panel will get
along correctly

-------------------------------------------------------------------------------

Mon Oct  4 17:58:33 PDT 1999
(Raster)

my god.. copyright notices..........

-------------------------------------------------------------------------------

Mon Oct  4 18:10:34 PDT 1999
(Raster)

better directory checkign on startup.........

-------------------------------------------------------------------------------

Mon Oct  4 18:19:13 PDT 1999
(Raster)

get rid of "//" C++ style comments..... eeeeeeevil

-------------------------------------------------------------------------------

Tue Oct  5 09:15:46 PDT 1999
(Raster)

get rid of ~ backup file and rogue .xvpics dir :)